--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="UCT-Form.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>UCT-Form</title>
+<title>UCT student number generator</title>
 </head>
 
 <body onload="document.form.firstName.focus()">
