--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body onload="document.form.firstName.focus()">
 <div id="centrePiece" class="centrePiece" width="500" align="center">
 	<div id ="centrePieceChild" width="300">
-<p><img src="Unnamed Site 2/University_of_Cape_Town_logo.png"  alt=""/></p>
+<p><img src="University_of_Cape_Town_logo.png"  alt=""/></p>
 <h1> <strong>UCT student number generator</strong></h1>
 <form id="form1" name="form1" method="post">
 <label for="textfield">First name:</label>
